Quick refactoring
Camel case, dangling comments, incorrect indentation, etc.